Release datarouter 0.0.32